report abuse button 100% on mobile (bug 1135152)

--- a/src/media/css/detail/base.styl
+++ b/src/media/css/detail/base.styl
@@ -52,7 +52,6 @@
     margin: 0 auto;
     max-width: 100%;
     text-align: center;
-    width: $mobile-content-width;
 }
 
 .detail-left-side {
@@ -80,6 +79,9 @@
     }
     .truncated-wrapper + a.view-all-tab {
         display: none;
+    }
+    .app-report-abuse .button {
+        width: $mobile-content-width;
     }
 }
 
